# optical_qrc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_test.yml  publish_results.yml
data/: classical_optimization_forecasting.csv  classical_optimization_regression.csv  fig3c_global_phase_xor.csv  fig3e_global_phase_memory.csv  fig4b_general_encoding_parity_check.csv  figS2_global_phase_double_scroll.pkl  figS4_xor_comparison.csv  figS4_xor_comparison_ESN.csv  figS4_xor_comparison_LSTM.csv  figS5_memory_comparison.csv  figS5_memory_comparison_ESN.csv  figS5_memory_comparison_LSTM.csv  params_vs_neurons_Double-scroll.csv  params_vs_neurons_Lorenz.csv
qrc/parametric_process/: abstract_process.py  precomputed_process.py  process.py
qrc/reservoir/: abstract_reservoir.py  delay_line_reservoir.py  echo_state_network.py  gaussian_utils.py  global_phase_protocol.py  long_short_term_memory.py  pump_shaping_protocol.py
qrc/task/: abstract_task.py  benchmarks.py  (+3 more)
simulations/: 0_classical_optimization_forecasting.py  0_example.py  0_general_encoding_double_scroll.py  0_general_encoding_expressivity.py  classical_optimization_regression.py  fig3c_global_phase_xor.py  fig3e_global_phase_memory.py  fig4a_global_phase_double_scroll.py  fig4b_general_encoding_parity_check.py  fig4cd_general_encoding_expressivity.py  fig4cd_general_encoding_expressivity_all_options.py  fig4cd_general_encoding_expressivity_exact.py  fig4cd_general_encoding_expressivity_v2.py  figS2_global_phase_double_scroll.py  figS3_comparison_with_classical_3.py  figS4_xor_comparison.py  figS5_memory_comparison.py  figS6_forecasting_comparison.py  old_fig4cd_general_encoding_expressivity.py  params_vs_neurons.py
tests/: test_xor.py
(+1 files in other folders)
