[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optical_qrc"
version = "1.0.0"
description = "Library and scripts for reproducing results from 'Experimental memory control in continuous variable optical quantum reservoir computing'"
authors = [
  { name="Emilie Gillet", email="emilie.gillet@etu.sorbonne-universite.fr" },
  { name="Iris Paparelle", email="iris.paparelle@lkb.upmc.fr" },
  { name="Daniel Montesinos", email="danielmontesinos@ifisc.uib-csic.es" }
]
dependencies = [
  "numpy>=1.23",
  "scipy",
  "matplotlib>=3.10",
  "scikit-learn",
  "pandas",
  "tqdm",
  "pytest",
  "tensorflow>=2.2"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"qrc.parametric_process" = ["data/*"]

[project.urls]
Homepage = "https://github.com/roseopicta/optical_qrc"